@@ -1,3 +1,13 @@
+Mon May 15 10:43:30 1995    <tytso@rsx-11.mit.edu>
+
+	* login.c (main): Only try to use TIOCSETD if it is defined
+		(instead of relying on _IBMR2 *not* being defined).
+
+		Only try to use TIOCNXCL if it is defined.
+
+	* krcp.c: If setreuid() is emulated using setresuid(),
+		#define HAVE_SETREUID so it gets used.
+
 Sat May 13 08:59:38 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* krshd.c (recvauth): Use krb5_auth_con_genaddrs to set the port
